# ShellWhisper

./: .gitignore  Cargo.toml  README.MD
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/db/: tables.sql
server/src/: handles.rs  lib.rs  main.rs  server_error.rs  server_state.rs  ui.rs
server/src/handles/: connection_handles.rs  error.rs  message.rs  user.rs  user_ip.rs
server/src/ui/: ui_chat_screen.rs  ui_control.rs  ui_main_screen.rs  ui_screen.rs  ui_state.rs
server/tests/: server_error_test.rs  server_state_tests.rs
