[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros",  "chrono", "ipnetwork"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15.0"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
